--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "razorpay": "^2.9.6",
     "stripe": "^20.3.1"
   },
   "devDependencies": {
