--- a/backend/package.json
+++ b/backend/package.json
@@ -15,10 +15,12 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "@types/jsonwebtoken": "^9.0.10",
     "cors": "^2.8.6",
     "date-fns": "^4.1.0",
     "dotenv": "^17.3.1",
     "express": "^5.2.1",
+    "jsonwebtoken": "^9.0.3",
     "razorpay": "^2.9.6",
     "stripe": "^20.3.1"
   },
